--- a/Web/src/app/components/util/file-uploader/file-uploader.component.css
+++ b/Web/src/app/components/util/file-uploader/file-uploader.component.css
@@ -37,7 +37,6 @@
     display: block;
     font-weight: 900;
     text-align: center;
-    z-index: 1;
   }
   
   .uploader img {
@@ -60,7 +59,6 @@
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    z-index: -1;
     box-shadow: 0 0 4px #161616;
   }
   
@@ -75,4 +73,16 @@
       height: 10px;
       width: 10px;
       position: absolute;
+  }
+
+  .empty-img {
+    pointer-events: none;
+    opacity: 0.9;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    box-shadow: 0 0 4px #161616;
   }
