--- a/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
+++ b/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
@@ -2,7 +2,7 @@
   <p>Please fill the form to resquest to be a Expert</p>
   <div class="file-container" ngClass.xs="file-container-mobile" ngClass.sm="file-container-tablet" ngClass.gt-sm="file-container-web"> 
     <div class="file-uploader">
-      <file-uploader #FileUploadComponent [pictureUrl]="pictureUrl"></file-uploader>
+      <file-uploader #FileUploadComponent></file-uploader>
     </div>
   </div>
 </div>
