--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -22,6 +22,11 @@
 
 .recommendation-table{
     text-align: left;
+    font-family: 'Gilroy'
+}
+
+.recommendation-table .mat-header-row{
+    height: 25px;
 }
 
 .recommendation-table th{
