Import icons and top experts page

--- a/Web/src/app/components/asset/trending-assets/trending-assets.component.css
+++ b/Web/src/app/components/asset/trending-assets/trending-assets.component.css
@@ -21,3 +21,12 @@ a{
     text-align: center;
     color: #626262;
 }
+
+.separator{
+    width: calc(100% - 190px);
+    margin:auto;
+    margin-top:36px;
+    min-width: 420px;
+    border: solid 0.3px #3b3b3b;
+    height: 1px;
+}
