--- a/Web/src/app/components/header/header.component.html
+++ b/Web/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <img src="./assets/logo.png" routerLink="" class="landing-logo">
 <span class="spacer"></span>
 <div class="menu" fxLayout="row" fxLayoutGap="16px" fxLayoutAlign="space-around center">
-    <a routerLink="/top-advisors" routerLinkActive="active">TOP ADVISORS</a>
+    <a routerLink="/top-experts" routerLinkActive="active">TOP EXPERTS</a>
     <a routerLink="/top-assets" routerLinkActive="active">TOP ASSETS</a>
     <a routerLink="/about-us" routerLinkActive="active">ABOUT US</a>
     <div class="separator"></div>
