--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -1,3 +1,3 @@
 <recommendation-box-list></recommendation-box-list>
-<top-advisors></top-advisors>
+<top-experts [resultsLimit]=4 [hideFilters]=true></top-experts>
 <trending-assets></trending-assets>
