--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -1,41 +1,23 @@
-<div  class="filter-form" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center">
+<div class="asset-card" fxLayout="row"  fxLayoutGap="10px" fxLayoutAlign="left center">
   <div>
       <img [src]="getAssetImgUrl()">
     </div>
   <div>
-    Name: {{asset.name}}
+    {{asset.code}}<br>{{asset.name}}<br>
+    <div *ngIf="asset.following">
+        <button (click)="onUnfollowClick()">UNFOLLOW</button>
+    </div>
+    <div *ngIf="!asset.following">
+      <button (click)="onFollowClick()">FOLLOW</button>
+    </div>
   </div>
   <div>
-    Acronym: {{asset.name}}
+    {{getLastValue()}}<br>{{asset.variation24h}}
   </div>
   <div>
-    Success Rate: {{asset.name}}
+    {{asset.totalRatings}}<br>Ratings
   </div>
   <div>
-    Current Value: {{asset.name}}
-  </div>
-  <div>
-    24h Variation: {{asset.name}}
-  </div>
-  <div>
-    30 days recomendation:
-    <br/>
-    Buy: 
-    <br/>
-    Close
-    <br/>
-    Sell
-  </div>
-  <div>
-    General Consensus: {{asset.name}}
-  </div>
-  <div>
-    Rating: {{asset.name}}
-  </div>
-  <div *ngIf="asset.following">
-      <button (click)="onUnfollowClick()">UNFOLLOW</button>
-  </div>
-  <div *ngIf="!asset.following">
-    <button (click)="onFollowClick()">FOLLOW</button>
+    {{getGeneralRecommendation()}}
   </div>
 </div>
