--- a/Web/src/app/components/asset/asset-card/asset-card.component.css
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.css
@@ -2,3 +2,27 @@
     padding: 15px;
     border-bottom: solid 0.5px #707070;
 }
+
+.ratings{
+    height: 56px;
+    width: 56px;
+    line-height: 56px;
+    border-radius: 30px;
+    border: solid 2px #f99d00;
+    font-size: 8.5px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.18;
+    letter-spacing: 0.2px;
+    text-align: center;
+    color: #393939;
+    margin: 9px 16px;
+    line-height: 1;
+}
+
+.ratings .rating-value{
+    font-size: 18px;
+    line-height: 0.56;
+    letter-spacing: 0.5px;
+}
