--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -11,13 +11,16 @@
       <button (click)="onFollowClick()">FOLLOW</button>
     </div>
   </div>
-  <div>
-    {{getLastValue()}}<br>{{asset.variation24h}}
-  </div>
   <div class="ratings" fxLayout="column" fxLayoutAlign="center center">
     <div class="rating-value">{{asset.totalRatings}}</div><br>{{getRatingLabel()}}
   </div>
-  <div>
+  <div fxLayoutAlign="center center" class="general-recommendation-box" [class.neutral]="asset.mode==0" [class.moderate-buy]="asset.mode==1" [class.strong-buy]="asset.mode==2" [class.moderate-sell]="asset.mode==3" [class.strong-sell]="asset.mode==4" [class.close]="asset.mode==5">
     {{getGeneralRecommendation()}}
+  </div>
+  <div>
+    {{getLastValue()}}
+  </div>
+  <div>
+    {{asset.variation24h}}
   </div>
 </div>
