--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -2,8 +2,8 @@
   <div>
       <img [src]="getAssetImgUrl()">
     </div>
-  <div>
-    {{asset.code}}<br>{{asset.name}}<br>
+  <div fxLayout="column">
+    <div class="symbol">{{asset.code}}</div><div class="asset-name">{{asset.name}}</div>
     <div *ngIf="asset.following">
         <button (click)="onUnfollowClick()">UNFOLLOW</button>
     </div>
@@ -14,10 +14,15 @@
   <div class="ratings" fxLayout="column" fxLayoutAlign="center center">
     <div class="rating-value">{{asset.totalRatings}}</div><br>{{getRatingLabel()}}
   </div>
+  <div class="ratings-distribution" fxLayout="column">
+    <div fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="6px"><div class="ratings-bullet-point"></div><div>81.0% Buy</div></div>
+    <div fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="6px"><div class="ratings-bullet-point"></div><div>18.9% Hold</div></div>
+    <div fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="6px"><div class="ratings-bullet-point"></div><div>0.1% Sell</div></div>
+  </div>
   <div fxLayoutAlign="center center" class="general-recommendation-box" [class.neutral]="asset.mode==0" [class.moderate-buy]="asset.mode==1" [class.strong-buy]="asset.mode==2" [class.moderate-sell]="asset.mode==3" [class.strong-sell]="asset.mode==4" [class.close]="asset.mode==5">
     {{getGeneralRecommendation()}}
   </div>
-  <div>
+  <div class="price">
     {{getLastValue()}}
   </div>
   <div>
