--- a/Web/src/app/components/util/percentage-display/percentage-display.component.html
+++ b/Web/src/app/components/util/percentage-display/percentage-display.component.html
@@ -1,1 +1,1 @@
-<span [class.positive]="value > 0" [class.negative]="value < 0">{{value * 100 | number:'1.2'}}%</span>
+<span [class.positive]="value > 0" [class.negative]="value < 0">{{value * 100 | number:'1.2-2'}}%</span>
