--- a/Web/src/app/components/admin/advisors-requests/advisors-requests.component.html
+++ b/Web/src/app/components/admin/advisors-requests/advisors-requests.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <h1>Advisors Requests</h1>
+  <h1>Experts Requests</h1>
   <div *ngIf="!requests">Loading...</div>
   <div *ngIf="requests && requests.length == 0">No pending requests.</div>
   <div *ngFor="let request of requests">
