--- a/Web/src/app/components/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
             </div>
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
                 <span class="biggerNumber bold">{{dashboardData.totalAdvisors}}<span class="smallNumber bold">&nbsp;/&nbsp;{{dashboardData.totalActiveAdvisors}}</span></span>
-                <div class="biggerText totalText">ADVISORS<span class="numberText">&nbsp;/&nbsp;ACTIVES</span></div>
+                <div class="biggerText totalText">EXPERTS<span class="numberText">&nbsp;/&nbsp;ACTIVES</span></div>
             </div>
         </div>
         <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="80px" fxLayoutGap.xs="30px" fxLayoutGap.sm="45px">
@@ -25,7 +25,7 @@
             </div>
             <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
                 <span class="smallNumber bold">{{dashboardData.totalRequestToBeAdvisor}}</span>
-                <span class="smallText totalText">REQUEST TO BE ADVISOR</span>
+                <span class="smallText totalText">REQUEST TO BE EXPERT</span>
             </div>
         </div>
         <div class="registration-chart" [chart]="registrationChart"></div>
@@ -126,7 +126,7 @@
                 </div>
                 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
                     <span class="totalNumber bold">{{dashboardData.totalAdvisorsFollowed}}</span>
-                    <span class="numberText totalText">ADVISORS FOLLOWED</span>
+                    <span class="numberText totalText">EXPERTS FOLLOWED</span>
                 </div>
             </div>
             <table>
