--- a/Web/src/app/components/advisor/advisor-details/advisor-details.component.html
+++ b/Web/src/app/components/advisor/advisor-details/advisor-details.component.html
@@ -8,7 +8,7 @@
       </div>
       <div>Asset: {{asset.code}} - {{asset.name}}</div>
       <div>Total Ratings: {{asset.totalRatings}}</div>
-      <div>Total Advisors: {{asset.totalAdvisors}}</div>
+      <div>Total Experts: {{asset.totalAdvisors}}</div>
       <div>Last Value: {{asset.lastValue}}</div>
       <div>24h: {{asset.variation24h}}</div>
       <div>7d: {{asset.variation7d}}</div>
