--- a/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
+++ b/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
@@ -7,7 +7,7 @@
     [formControl]="formControl" 
     placeholder="{{placeholder}}" 
     required="{{required}}" 
-    disabled="{{disabled}}"
+    readonly="{{disabled}}"
     minlength="{{minlength}}" 
     maxlength="{{maxlength}}" 
     autocomplete="{{autocomplete}}"
@@ -18,7 +18,7 @@
     [formControl]="formControl" 
     placeholder="{{placeholder}}" 
     required="{{required}}" 
-    disabled="{{disabled}}"
+    readonly="{{disabled}}"
     minlength="{{minlength}}" 
     maxlength="{{maxlength}}" 
     (change)="onChangeInput()"
@@ -32,7 +32,7 @@
     [formControl]="formControl" 
     placeholder="{{placeholder}}" 
     required="{{required}}" 
-    disabled="{{disabled}}"
+    readonly="{{disabled}}"
     minlength="{{minlength}}" 
     maxlength="{{maxlength}}" 
     (change)="onChangeInput()"
