--- a/Web/src/app/components/advisor/expert-details/expert-details.component.css
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.css
@@ -4,7 +4,7 @@
     font-style: italic;
     text-align: right;
     color: #555555;
-    margin: 24px 90px;
+    margin: 24px 0px;
 }
 
 .breadcrumbs span{
@@ -41,17 +41,11 @@
     font-size: 9px;
     font-weight: 600;
     color: #ffffff;
-    
 }
 
 .mat-header-row{
     height: 32px !important;
 }
-
-.mat-cell{
-    height: 48px !important;
-}
-
 
 .element-row {
     position: relative;
@@ -68,3 +62,8 @@
 .element-row.expanded {
     border-bottom-color: transparent;
 }
+
+/deep/ .collapsed .highcharts-container{
+    display: none;
+}
+
