finishing top assets page

--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -1,4 +1,4 @@
-<div class="asset-card" fxLayout="row"  fxLayoutGap="10px" fxLayoutAlign="left center">
+<div class="asset-card" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutAlign="left center">
   <div>
       <img [src]="getAssetImgUrl()">
     </div>
