--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -11,4 +11,5 @@
   <div  fxLayout="column"  fxLayoutAlign="center center">
     <asset-card *ngFor="let asset of assets" [asset]="asset"></asset-card>
   </div>
+  <trending-assets></trending-assets>
 </div>
