--- a/Web/src/app/components/account/register/register.component.html
+++ b/Web/src/app/components/account/register/register.component.html
@@ -1,27 +1,22 @@
-<p>Register new Account</p>
-<div class="main-content">
-  <form [formGroup]="registerForm" (ngSubmit)="onCreateAccountClick()" fxLayoutAlign="space-evenly center">
-    <div class="blue-box" fxLayout="column" fxLayoutGap="20px">
-      <div fxLayout="column" fxLayoutAlign="space-evenly center">
-        <div fxLayout="row" fxLayoutGap="20px">
-          <input matInput placeholder="Email" [(ngModel)]="registerRequest.email" formControlName="email" type="text" autocomplete="username email"/>
-        </div>
-        <div fxLayout="row" fxLayoutGap="20px">
-          <input matInput placeholder="Password" [(ngModel)]="registerRequest.password" type="password" formControlName="password"
-            autocomplete="current-password" />
-        </div>
-        <div fxLayout="row" fxLayoutGap="20px">
-          <input matInput [(ngModel)]="registerRequest.referralCode" type="text" formControlName="referralCode"/>
-        </div>
-        <div fxLayout="row" fxLayoutGap="20px">
-          <input mat-checkbox [(ngModel)]="registerRequest.requestedToBeAdvisor" type="checkbox" formControlName="requestedToBeAdvisor"/>
-        </div>
-        <div fxLayout="row" fxLayoutGap="20px">
-          <button type="submit" class="primary-button bold login">
-            Create Account
-          </button>
-        </div>
-      </div>
-    </div>
-  </form>
+<div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center">
+  <p class="header">Fill your data to create an account and improve your investments.
+    <br/>You need to hold some AUC in your own wallet.</p>
 </div>
+<div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center">
+  <inheritance-input #Email [options]="getEmailOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+    [value]="registerRequest.email" (onChange)="registerRequest.email = $event"></inheritance-input>
+  <inheritance-input #Password [options]="getPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+    [value]="registerRequest.password" (onChange)="registerRequest.password = $event"></inheritance-input>
+  <inheritance-input #Referral [options]="getReferralOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+    [value]="registerRequest.referralCode" (onChange)="onChangeReferralCode($event)"></inheritance-input>
+  <p class="discount" *ngIf="discountMessage.length > 0">{{discountMessage}}</p>
+</div>
+<div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+  <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
+  <mat-checkbox required [(ngModel)]="acceptTermsAndConditions">Agree with all terms</mat-checkbox>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onCreateAccountClick()" [promiseBtn]="promise">Register</button>
+  <a class="modal-link" (click)="onLoginClick()">I have an account. Go to Login</a>
+  <button mat-flat-button (click)="socialSignIn('facebook')">Sign in with Facebook</button>
+  <button mat-flat-button (click)="socialSignIn('google')">Signin in with Google</button> 
+</div>
+  
