--- a/Web/src/app/components/advisor/expert-details/expert-details.component.css
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.css
@@ -35,6 +35,13 @@
 .assets-table{
     width: 100%;
     margin-top: 8px;
+    text-align: center;
+}
+
+.assets-table .mat-cell{
+    font-size: 9px;
+    font-weight: 300;
+    color: #5d5d5d;
 }
 
 .assets-table th{
@@ -42,6 +49,10 @@
     font-size: 9px;
     font-weight: 600;
     color: #ffffff;
+}
+
+.assets-table th.mat-header-cell{
+    text-align: center;
 }
 
 .mat-header-row{
@@ -77,4 +88,20 @@
     font-weight: 500;
     text-align: center;
     color: #ffffff;
+}
+
+.mat-column-assetName .table-asset-code{
+    font-size: 11px;
+    font-weight: 600;
+}
+
+.mat-column-position div{
+    width: 70px;
+    height: 16px;
+    line-height: 16px;
+    background-color: #63c96f;
+    font-size: 7px;
+    font-weight: 600;
+    color: #ffffff;
+    margin:auto;
 }
