--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -10,6 +10,9 @@
 
   <div  fxLayout="column"  fxLayoutAlign="center center">
     <asset-card *ngFor="let asset of assets" [asset]="asset"></asset-card>
+    <button mat-button *ngIf="hasMoreAssets()" (click)="loadMoreAssets()">
+      Load more
+    </button>
   </div>
   <trending-assets></trending-assets>
 </div>
