--- a/Web/src/app/components/account/confirm-email/confirm-email.component.html
+++ b/Web/src/app/components/account/confirm-email/confirm-email.component.html
@@ -1,8 +1,7 @@
-<div *ngIf="!confirmationCode">
-<p>Please click on the link sent to {{loggedUserEmail}} to confirm your email. 
-  </p>
-<button (click)="resendEmailConfirmation()">RESEND EMAIL</button>
+<div *ngIf="!confirmationCode" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
+  <p>Please click on the button to resend the confirmation email to {{loggedUserEmail}}.</p>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="resendEmailConfirmation()" [promiseBtn]="promise">Resend Email</button>
 </div>
-<div *ngIf="confirmationCode">
-  Your email is being confirmed and you will be redirected
+<div *ngIf="confirmationCode" fxLayout="column" fxLayoutAlign="space-evenly center">
+  <p>Your email is being confirmed and you will be redirected</p>
 </div>
